Base script working

--- a/scripts/template.html
+++ b/scripts/template.html
@@ -5,7 +5,7 @@
     <title>projectCarousel.js</title>
 </head>
 
-<body>
+<body onload="displayProjects('projectCarousel')">
 
     <h1>projectCarousel.js</h1>
 
@@ -13,9 +13,7 @@
     <div id="projectCarousel"></div>
 
     <!-- Include displayProjects.js on this page -->
-    <script src="displayProjects.js">
-        displayProjects("projectCarousel");
-    </script>
+    <script src="displayProjects.js"></script>
 </body>
 
 </html>
