--- a/scripts/template.html
+++ b/scripts/template.html
@@ -5,15 +5,15 @@
     <title>projectCarousel.js</title>
 </head>
 
-<body onload="displayProjects('projectCarousel')">
+<body onload="projectCarousel('projects')">
 
     <h1>projectCarousel.js</h1>
 
     <h2>Projects</h2>
-    <div id="projectCarousel"></div>
+    <div id="projects"></div>
 
     <!-- Include displayProjects.js on this page -->
-    <script src="displayProjects.js"></script>
+    <script src="projectCarousel.js"></script>
 </body>
 
 </html>
