--- a/scripts/template.html
+++ b/scripts/template.html
@@ -7,9 +7,10 @@
 
 <body onload="projectCarousel('projects')">
 
-    <h1>projectCarousel.js</h1>
+    <h1>projectCarousel.js</h1><br>
 
-    <h2>Projects</h2>
+    <h2>Projects</h2><br>
+    
     <div id="projects"></div>
 
     <!-- Include displayProjects.js on this page -->
