Truly final template.html

--- a/scripts/template.html
+++ b/scripts/template.html
@@ -7,13 +7,11 @@
 
 <body onload="projectCarousel('projects')">
 
-    <h1>projectCarousel.js</h1><br>
-
-    <h2>Projects</h2><br>
-    
+    <h1>projectCarousel.js</h1>
+    <h2>Projects</h2>    
     <div id="projects"></div>
 
-    <!-- Include displayProjects.js on this page -->
+    <!-- Include projectCarousel.js on this page -->
     <script src="projectCarousel.js"></script>
 </body>
 
