--- a/scripts/template.html
+++ b/scripts/template.html
@@ -5,7 +5,7 @@
     <title>projectCarousel.js</title>
 </head>
 
-<body onload="projectCarousel('projects')">
+<body onload="projectCarousel('projects');">
 
     <h1>projectCarousel.js</h1>
     <h2>Projects</h2>    
