--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <title>projectCarousel.js</title>
 </head>
 
-<body onload="projectCarousel('projects');">
+<body>
 
     <h1>projectCarousel.js</h1>
-    <h2>Projects</h2>    
+    <h2>Projects</h2>
     <div id="projects"></div>
 
-    <!-- Include projectCarousel.js on this page -->
+    <!-- Include RequireJS -->
+    <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
+    <!-- Include projectCarousel.js -->
     <script src="projectCarousel.js"></script>
+
 </body>
 
 </html>
