Simplify index.html template

--- a/index.html
+++ b/index.html
@@ -5,16 +5,14 @@
     <title>projectCarousel.js</title>
 </head>
 
-<body>
+<body onload="projectCarousel('projects')">
 
     <h1>projectCarousel.js</h1>
     <h2>Projects</h2>
     <div id="projects"></div>
 
-    <!-- Include RequireJS -->
-    <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
     <!-- Include projectCarousel.js -->
-    <script src="projectCarousel.js"></script>
+    <script src="/projectCarousel.js"></script>
 
 </body>
 
