--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <h2>Projects</h2>
     <div id="projects"></div>
 
+    <!-- Include jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- Include projectCarousel.js -->
     <script src="/projectCarousel.js"></script>
 
