Finalize index.html (template)

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
 <body onload="projectCarousel('projects')">
 
-    <h1>projectCarousel.js</h1>
-    <h2>Projects</h2>
+    <h1>projectCarousel.js</h1><br>
+    <h2>Projects</h2><br>
     <div id="projects"></div>
 
     <!-- Include projectCarousel.js -->
