--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en-US">
 
 <head>
-    <title>projectCarousel.js</title>
+    <title>gitHubRepoDisplayer.js</title>
 </head>
 
-<body onload="projectCarousel('projects')">
+<body onload="gitHubRepoDisplayer('projects')">
 
     <div id="projects"></div>
 
-    <!-- Include projectCarousel.js -->
-    <script src="/projectCarousel.js"></script>
+    <!-- Include gitHubRepoDisplayer.js -->
+    <script src="/gitHubRepoDisplayer.js"></script>
 
 </body>
 
