Update gitHubRepoDisplayer.js to RepoDisplayerJS

--- a/demo/index.html
+++ b/demo/index.html
@@ -2,15 +2,15 @@
 <html lang="en-US">
 
 <head>
-    <title>gitHubRepoDisplayer.js</title>
+    <title>RepoDisplayerJS</title>
 </head>
 
-<body onload="gitHubRepoDisplayer('projects')">
+<body onload="repoDisplayer('projects')">
 
     <div id="projects"></div>
 
-    <!-- Include gitHubRepoDisplayer.js -->
-    <script src="/gitHubRepoDisplayer.js"></script>
+    <!-- Include RepoDisplayerJS -->
+    <script src="/src/repoDisplayer.js"></script>
 
 </body>
 
